REFACTOR: (SPOT-130) sorted 대신 min으로 변경, 경로 없을 경우 로깅처리